--- a/easyshop/WebContent/front/personal_myFavorite.html
+++ b/easyshop/WebContent/front/personal_myFavorite.html
@@ -47,7 +47,7 @@
                                                 <em ms-class="{{el.country}}"></em>
                                                 <span>{{el.country | area}}</span>
                                             </div>
-					                        <p class="price">{{el.price | currency("", 0)}}</p>
+					                        <p class="price">{{el.price | currency}}</p>
         								</div>
         							</div>
         							<div class="operate-mask">
