--- a/easyshop/WebContent/front/personal_orderDetail.html
+++ b/easyshop/WebContent/front/personal_orderDetail.html
@@ -19,12 +19,12 @@
         		<p>下单时间：{{createTime}}</p>
         		<p>状态：<span ms-class="ready: status==3">{{status | orderStatus}}</span></p>
         		<div class="btn-box" ms-visible="status==101">
-        			<a class="cancel" href="javascript:;">取消订单</a>
+        			<a class="cancel" href="javascript:;" ms-click="cancelOrder">取消订单</a>
         			<a class="yl-btn middle" ms-attr-href="'balance_pay.html?orderId=' + orderId">立即支付</a>
         		</div>
-        		<div class="btn-box" ms-visible="status==102 || status==103 || status==104">
+        		<!--<div class="btn-box" ms-visible="status==102 || status==103 || status==104">
         			<button class="apply">申请退换货</button>
-        		</div>
+        		</div>-->
         	</div>
         	<div class="order-detail">
         		<div class="status" ms-class="status{{status}}"></div>
@@ -47,7 +47,7 @@
         					</div>
         					<div class="item">
         						<label>手机号码：</label>
-        						<p class="form-ctt">{{consigneeInfo.cellphone}}</p>
+        						<p class="form-ctt">{{consigneeInfo.phone}}</p>
         					</div>
         				</div>
         			</div>
@@ -87,8 +87,8 @@
         						<tr ms-repeat="products">
         							<td class="col1"><img class="img" ms-attr-src="el.imgs[0].imgsource" /></td>
         							<td class="col2">{{el.name}}</td>
-        							<td class="col3">{{el.currentPrice}}</td>
-        							<td class="col4">{{el.num}}</td>
+        							<td class="col3">{{el.price}}</td>
+        							<td class="col4">{{el.number}}</td>
         						</tr>
         					</tbody>
         				</table>
@@ -123,13 +123,34 @@
                     consigneeInfo: {
                 		consignee: "",
                 		address: "",
-                		cellphone: ""
+                		phone: ""
                 	},
                     pay: {
                 		type: "",
                 		oid: "",
-                		company: ""
+                		company: "EMS"
                 	},
+                	cancelOrder: function(){
+                        $.ajax({
+                            type: "post",
+                            url: DI.cancelOrder,
+                            data: {
+                                orderId: orderCtrl.orderId
+                            },
+                            dataType: "json",
+                            success: function(data){
+                                if(data.status == "success"){
+                                    alert("取消订单成功");
+                                    location.href = "personal_myOrder.html";
+                                }else{
+                                    alert(data.msg);
+                                }
+                            },
+                            error: function(err){
+                                console.log(err);
+                            }
+                        });
+                    },
                 	products: [],
                     amount: ""
                 });
@@ -145,16 +166,18 @@
                     },
                     dataType: "json",
                     success: function(data){
-                        var data = data.data;
+                       // var data = data.data;
                         orderCtrl.orderId = data.orderId;
                         orderCtrl.createTime = data.createTime;
                         orderCtrl.status = data.status;
                         orderCtrl.orderProgress = data.orderProgress;
                         orderCtrl.consigneeInfo.consignee = data.consignee;
                         orderCtrl.consigneeInfo.address = data.address;
-                        orderCtrl.consigneeInfo.cellphone = data.cellphone;
+                        orderCtrl.consigneeInfo.phone = data.phone;
                         orderCtrl.products = data.products;
                         orderCtrl.amount = data.amount;
+                        orderCtrl.pay.type = data.paytype;
+                        orderCtrl.pay.oid = data.oid;
                     }
                 });
             });
