--- a/easyshop/WebContent/front/personal_orderDetail.html
+++ b/easyshop/WebContent/front/personal_orderDetail.html
@@ -128,7 +128,7 @@
                     pay: {
                 		type: "暂无",
                 		oid: "暂无",
-                		company: "EMS"
+                		company: "顺丰"
                 	},
                 	cancelOrder: function(){
                         $.ajax({
