--- a/easyshop/WebContent/front/personal_orderLogistics.html
+++ b/easyshop/WebContent/front/personal_orderLogistics.html
@@ -97,7 +97,7 @@
                     pay: {
                 		type: "支付宝在线支付/银联在线支付/微信在线支付",
                 		oid: "",
-                		company: "EMS"
+                		company: "顺丰"
                 	},
                 	goods: [],
                     total: ""
